# wt-cv-stylus

./: .copilot-context.md  .gitignore  As any developer i tryed AI.md  CMakeLists.txt  README.md  WHISPER_INTEGRATION_SUMMARY.md  download_models.sh  iframes.html  prolonged_analyses.md  wt-cv-stylus-copilot.code-workspace  wt_config.xml  wtqbgL9y
.github/: copilot-instructions.md
.github/instructions/: copilot.instructions.md  jsignal-usage.instructions.md  script-creation.instructions.md  widget-class.instructions.md
.github/prompts/: create-widget.prompt.md  delete-widget.prompt.md  script-creation.prompt.md
dockerfiles/: wt-builder  wt-cv-stylus
docs/: GETTING_STARTED.md  QUICK_REFERENCE.md  README.md  api-reference.md  build-deployment.md  component-reference.md  development_guide.md  project-overview.md  whisper-thread-memory-analysis.md  wt-auth-reference.md  wt-dbo-reference.md
docs/prompts/: wt-framework-documentation-prompt.md
docs/whispercpp/: README.md  advanced-examples.md  core-examples.md  getting-started.md  integration-guide.md  language-bindings.md  performance.md  project-integration.md  realtime-examples.md  web-examples.md
docs/wt-4.11-release/: core-concepts.md  database-integration.md  framework-overview.md  layout-system.md  widget-reference.md
libs/: .gitignore
models/: MODELS_README.md
resources/themes/default/: wt.css
scripts/: .copilot-context.md  README.md  README.sh  build.sh  clone_libraries.sh  docker-b-wt-builder.sh  docker-b-wt-cv-stylus.sh  docker-r-wt-cv-stylus.sh  install-dependencies.sh  memory_analyzer.sh  memory_monitor.sh  run.sh  ubuntu-install-dependencies.sh
scripts/output/: .gitignore
scripts/script_runner/: .copilot-context.md  CMakeLists.txt  PROJECT_SUMMARY.md  README.md  test_ansi.sh  test_debug.sh  test_fixes.sh  test_script.sh
scripts/script_runner/docs/: api-reference.md  architecture.md  user-guide.md
scripts/script_runner/examples/: README.md
scripts/script_runner/examples/sample_scripts/: build_and_test.sh  debug_keys.sh  demo_output.py  example_task.py  test_colors.py  test_colors.sh
scripts/script_runner/include/: Exceptions.h  Logger.h  ProcessManager.h  ScriptRunner.h  UIManager.h  UIManager.h.corrupted
scripts/script_runner/src/: Exceptions.cpp  Logger.cpp  ProcessManager.cpp  ScriptRunner.cpp  ScriptRunner.cpp.bak  UIManager.cpp  main.cpp  test_process_manager.cpp
src/: main.cpp
src/000-Server/: Server.cpp
src/000-Server/Whisper/: WhisperAi.cpp  WhisperAi.h
src/001-App/: App.cpp  App.h
src/002-Theme/: DarkModeToggle.cpp  DarkModeToggle.h  Theme.cpp  Theme.h  ThemeSwitcher.cpp  ThemeSwitcher.h
src/003-Components/: BigWorkWidget.cpp  BigWorkWidget.h  Button.cpp  Button.h  ComponentsDisplay.cpp  ComponentsDisplay.h  DragBar.cpp  DragBar.h  MonacoEditor.cpp  MonacoEditor.h  VoiceRecorder.cpp  VoiceRecorder.h  WhisperWrapper.cpp  WhisperWrapper.h
src/004-Dbo/: Session.cpp  Session.h
src/004-Dbo/Tables/: Permission.cpp  User.cpp  User.h
src/005-Auth/: AuthWidget.cpp  RegistrationView.cpp  UserDetailsModel.cpp
src/006-Navigation/: Navigation.cpp  Navigation.h
src/007-UserSettings/: UserSettings.cpp  UserSettings.h
src/008-AboutMe/: AboutMe.cpp  AboutMe.h
src/008-ComponentsDisplay/: ComponentsDisplay.cpp
src/010-StarWarsApi/: StarWarsApi.cpp
src/010-VoiceRecorder/: VoiceRecorder.cpp  VoiceRecorder.h
src/101-Examples/: BroadcastExample.cpp  BroadcastExample.h  CheckboxBroadcastExample.cpp  CheckboxBroadcastExample.h  StarWarsApi.cpp
src/101-StarWarsApi/: StarWarsApi.cpp  StarWarsApi.h
src/999-ExternalServices/: WhisperCliService.cpp  WhisperCliService.h  whisper_service_main.cpp
src/999-Stylus/: Stylus.cpp  Stylus.h
src/999-Stylus/000-Utils/: DragBar.cpp  DragBar.h  FileExplorerTree.cpp  FileExplorerTree.h  StylusPanelWrapper.cpp  StylusPanelWrapper.h  StylusState.cpp  StylusState.h  XMLFileBrain.cpp  XMLFileBrain.h
src/999-Stylus/000-Utils/tinyxml2/: tinyxml2.cpp
src/999-Stylus/001-TailwindCss/: TailwindCss.cpp  TailwindCss.h
src/999-Stylus/005-ImagesManager/: ImagesManager.cpp  ImagesManager.h
static/: tailwind.css
static/stylus-resources/: empty-file.js
static/stylus-resources/tailwind4/: input.css
static/stylus-resources/tailwind4/configuration/: theme.css
static/stylus-resources/xml/000-examples/: override-wt.xml
static/stylus-resources/xml/001-App/: main.xml  svg.xml
